--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.1 <4.0.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -38,7 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   searchbar_animation: ^0.0.4
   image_picker: ^1.0.7
-  permission_handler: ^11.3.0
+  introduction_screen: ^3.1.12
 
 dev_dependencies:
   flutter_test:
