--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   searchbar_animation: ^0.0.4
   image_picker: ^1.0.7
-  introduction_screen: ^3.1.12
+  page_view_dot_indicator: ^2.3.0
 
 dev_dependencies:
   flutter_test:
